[project]
name = "maze-solver"
version = "0.1.0"
description = ""
authors = [
    { name = "wleklinskimateusz", email = "wleklinskimateusz05@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
packages = [{ include = "maze_solver", from = "src" }]


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.9.2"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
